test/valid/Instanceof/Instanceof.plume
/**
 * @author Vasco T. Vasconcelos
 * @version $Id: Instanceof.plume 482 2012-06-04 19:07:29Z tcomp000 $
 */
class Instanceof extends Object is

	method m : (o: Object) -> Boolean is
		o instanceof String